{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 40,
  "lineage": "0b30e84e-dda9-57ee-bd12-ef4f2cdf4621",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05351ae7ee55b5568",
            "associate_with_private_ip": "10.0.1.50",
            "association_id": "eipassoc-0d736e666a7534f85",
            "domain": "vpc",
            "id": "eipalloc-05351ae7ee55b5568",
            "instance": "i-0b344e037f5d4e3a9",
            "network_border_group": "us-east-1",
            "network_interface": "eni-02c43b495776e9e92",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-52-72-14-41.compute-1.amazonaws.com",
            "public_ip": "52.72.14.41",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.web",
            "aws_internet_gateway.dg_internet_gateway",
            "aws_network_interface.dg_net_interface",
            "aws_security_group.dg_allow_web",
            "aws_subnet.dg_public_subnet",
            "aws_vpc.dg_vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-080e1f13689e07408",
            "arn": "arn:aws:ec2:us-east-1:435202373383:instance/i-0b344e037f5d4e3a9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b344e037f5d4e3a9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-02c43b495776e9e92"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02c43b495776e9e92",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-54-146-39-164.compute-1.amazonaws.com",
            "public_ip": "54.146.39.164",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00363321ccc282ade",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07b1611d97169c6bf",
            "tags": {
              "Name": "dev_server"
            },
            "tags_all": {
              "Name": "dev_server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0bb0e3d50dfc7f0a2"
            ]
          },
          "dependencies": [
            "aws_network_interface.dg_net_interface",
            "aws_security_group.dg_allow_web",
            "aws_subnet.dg_public_subnet",
            "aws_vpc.dg_vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dg_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:435202373383:internet-gateway/igw-0084d97e2a6b6c6aa",
            "id": "igw-0084d97e2a6b6c6aa",
            "owner_id": "435202373383",
            "tags": {
              "name": "dev_igw"
            },
            "tags_all": {
              "name": "dev_igw"
            },
            "vpc_id": "vpc-059be679c9f375624"
          },
          "dependencies": [
            "aws_vpc.dg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "dg_net_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:435202373383:network-interface/eni-02c43b495776e9e92",
            "attachment": [
              {
                "attachment_id": "eni-attach-07b234f96a4279273",
                "device_index": 0,
                "instance": "i-0b344e037f5d4e3a9"
              }
            ],
            "id": "eni-02c43b495776e9e92",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0e:e6:b4:ef:13:59",
            "owner_id": "435202373383",
            "private_dns_name": "ip-10-0-1-50.ec2.internal",
            "private_ip": "10.0.1.50",
            "private_ip_list": [
              "10.0.1.50"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0bb0e3d50dfc7f0a2"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07b1611d97169c6bf"
          },
          "dependencies": [
            "aws_security_group.dg_allow_web",
            "aws_subnet.dg_public_subnet",
            "aws_vpc.dg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0084d97e2a6b6c6aa",
            "id": "r-rtb-0cb73cb761639be381080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0cb73cb761639be38",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.dg_internet_gateway",
            "aws_route_table.dg_public_rt",
            "aws_vpc.dg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dg_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:435202373383:route-table/rtb-0cb73cb761639be38",
            "id": "rtb-0cb73cb761639be38",
            "owner_id": "435202373383",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0084d97e2a6b6c6aa",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "name": "dev_public_rt"
            },
            "tags_all": {
              "name": "dev_public_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-059be679c9f375624"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dg_public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06b5b83195a295941",
            "route_table_id": "rtb-0cb73cb761639be38",
            "subnet_id": "subnet-07b1611d97169c6bf"
          },
          "dependencies": [
            "aws_route_table.dg_public_rt",
            "aws_subnet.dg_public_subnet",
            "aws_vpc.dg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dg_allow_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:435202373383:security-group/sg-0bb0e3d50dfc7f0a2",
            "description": "Allow web inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bb0e3d50dfc7f0a2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_web",
            "name_prefix": "",
            "owner_id": "435202373383",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev_allow_web"
            },
            "tags_all": {
              "Name": "dev_allow_web"
            },
            "timeouts": null,
            "vpc_id": "vpc-059be679c9f375624"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dg_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:435202373383:subnet/subnet-07b1611d97169c6bf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07b1611d97169c6bf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "435202373383",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "dev-pubic"
            },
            "tags_all": {
              "name": "dev-pubic"
            },
            "vpc_id": "vpc-059be679c9f375624"
          },
          "dependencies": [
            "aws_vpc.dg_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dg_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:435202373383:vpc/vpc-059be679c9f375624",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0be85c38d292ecc8e",
            "default_route_table_id": "rtb-0cd3c144e988ea3ae",
            "default_security_group_id": "sg-04f20bd0cfbe0145f",
            "dhcp_options_id": "dopt-026d525e778f53ea5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-059be679c9f375624",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cd3c144e988ea3ae",
            "owner_id": "435202373383",
            "tags": {
              "name": "dev"
            },
            "tags_all": {
              "name": "dev"
            }
          }
        }
      ]
    }
  ]
}